--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "types": ["node", "express", "multer"]
+  },
+  "include": ["src/**/*", "public/**/*"],
+  "exclude": ["node_modules"]
 }
